--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,17 @@
   </head>
   <body>
     <p>Welcome to the chat app</p>
-    <input type="text" name="" value="" placeholder="log in">
+    <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript">
+      var socket = io();
+
+      socket.on('connect', () => {
+        console.log('connected to server');
+      });
+
+      socket.on('disconnect', () => {
+        console.log('disconnected from server');
+      });
+    </script>
   </body>
 </html>
