--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,6 @@
   <body>
     <p>Welcome to the chat app</p>
     <script src="/socket.io/socket.io.js"></script>
-    <script type="text/javascript">
-      var socket = io();
-
-      socket.on('connect', () => {
-        console.log('connected to server');
-      });
-
-      socket.on('disconnect', () => {
-        console.log('disconnected from server');
-      });
-    </script>
+    <script src="/js/index.js" charset="utf-8"></script>
   </body>
 </html>
