--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
   </head>
-  <body>
-    <p>Welcome to the chat app</p>
+  <body class="chat">
+    <div class="chat__sidebar">
+      <h3>People</h3>
+      <div id="users">
 
-    <ol id="messages"></ol>
+      </div>
+    </div>
+    <div class="chat__main">
+      <ol id="messages" class="chat__messages"></ol>
+      <div class="chat__footer">
+        <form id="message-form">
+          <input type="text" name="message" placeholder="Message" autofocus autocomplete="off"/>
+          <button name="button">Send</button>
+        </form>
+        <button id="send-location">Send Location</button>
+      </div>
+    </div>
 
-    <form id="message-form">
-      <input type="text" name="message" placeholder="Message"/>
-      <button name="button">Send</button>
-    </form>
-    <button id="send-location">Send Location</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.3.1.min.js" charset="utf-8"></script>
     <script src="/js/index.js" charset="utf-8"></script>
