--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,32 @@
         <button id="send-location">Send Location</button>
       </div>
     </div>
-
+    <script type="text/template" id="message-template">
+      <li class="message">
+        <div class="message__title">
+          <h4>{{from}}</h4>
+          <span>{{createdAt}}</span>
+        </div>
+        <div class="message__body">
+          <p>{{text}}</p>
+        </div>
+      </li>
+    </script>
+    <script type="text/template" id="location-message-template">
+      <li class="message">
+        <div class="message__title">
+          <h4>{{from}}</h4>
+          <span>{{createdAt}}</span>
+        </div>
+        <div class="message__body">
+          <p><a href="{{url}}" target="_blank">My current location</a></p>
+        </div>
+      </li>
+    </script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.3.1.min.js" charset="utf-8"></script>
     <script src="/js/libs/moment.js" charset="utf-8"></script>
+    <script src="/js/libs/mustache.js" charset="utf-8"></script>
     <script src="/js/index.js" charset="utf-8"></script>
   </body>
 </html>
