--- a/public/chat.html
+++ b/public/chat.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Chat | Bens Chat App</title>
-    <meta name="viewport" content="width=devide-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="/css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
   </head>
@@ -50,6 +50,7 @@
     <script src="/js/libs/jquery-3.3.1.min.js" charset="utf-8"></script>
     <script src="/js/libs/moment.js" charset="utf-8"></script>
     <script src="/js/libs/mustache.js" charset="utf-8"></script>
+    <script src="/js/libs/deparam.js" charset="utf-8"></script>
     <script src="/js/chat.js" charset="utf-8"></script>
   </body>
 </html>
