=added room specific messaging

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,12 @@
         </div>
         <div class="form-field">
           <label>Room name</label>
-          <input type="text" name="room">
+          <select name="room">
+            <option value="volvo">Volvo</option>
+            <option value="saab">Saab</option>
+            <option value="mercedes">Mercedes</option>
+            <option value="audi">Audi</option>
+          </select>
         </div>
         <div class="form-field">
           <button>Join</button>
